--- a/style/index.html
+++ b/style/index.html
@@ -47,39 +47,39 @@
     <div class="carrossel-filmes">
         <div class="owl-carousel owl-theme">
             <div class="item">
-                <img class="box-filme" src="\img/min1.jpg" alt="" srcset="">
+                <img class="box-filme" src="\img/min1.jpg" alt="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min2.jpg" alt="" srcset="">
+                <img class="box-filme" src="\img/min2.jpg" alt="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min3.jpg" alt="" srcset="">
+                <img class="box-filme" src="\img/min3.jpg" alt="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min4.jpg" alt="" srcset="">
+                <img class="box-filme" src="\img/min4.jpg" alt="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min5.jpg" alt="" srcset="">
+                <img class="box-filme" src="\img/min5.jpg" alt="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min6.jpg" alt="" srcset="">
+                <img class="box-filme" src="\img/min6.jpg" alt="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min7.jpg" alt="" srcset="">
+                <img class="box-filme" src="\img/min7.jpg" alt="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min8.jpg" alt="" srcset="">
+                <img class="box-filme" src="\img/min8.jpg" alt="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min9.jpg" alt="" srcset="">
+                <img class="box-filme" src="\img/min9.jpg" alt="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min10.jpg" alt="" srcset="">
+                <img class="box-filme" src="\img/min10.jpg" alt="">
             </div>
         </div>    
     </div>
 
-    <script src="https://kit.fontawesome.com/d575673e2b.js" ></script>
+    <script src="https://kit.fontawesome.com/d575673e2b.js"></script>
     <script src="js/owl/jquery.min.js"></script>
     <script scr="js/owl/owl.carousel.min.js"></script>
     <script src="js/owl/setup.js"></script>
