--- a/style/index.html
+++ b/style/index.html
@@ -47,34 +47,34 @@
     <div class="carrossel-filmes">
         <div class="owl-carousel owl-theme">
             <div class="item">
-                <img class="box-filme" src="\img/min1.jpg" alt="">
+                <img class="box-filme" src="\img/min1.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min2.jpg" alt="">
+                <img class="box-filme" src="\img/min2.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min3.jpg" alt="">
+                <img class="box-filme" src="\img/min3.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min4.jpg" alt="">
+                <img class="box-filme" src="\img/min4.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min5.jpg" alt="">
+                <img class="box-filme" src="\img/min5.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min6.jpg" alt="">
+                <img class="box-filme" src="\img/min6.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min7.jpg" alt="">
+                <img class="box-filme" src="\img/min7.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min8.jpg" alt="">
+                <img class="box-filme" src="\img/min8.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min9.jpg" alt="">
+                <img class="box-filme" src="\img/min9.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min10.jpg" alt="">
+                <img class="box-filme" src="\img/min10.jpg" alt=""  srcset="">
             </div>
         </div>    
     </div>
