--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             <link rel="stylesheet" href="style/responsive.css">
 
             <!--owl css-->
-            <link rel="=stylesheet" href="style/owl/owl.carousel.min.css">
-            <link rel="=stylesheet" href= "style/owl/owl.theme.default.min.css">
+            <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+            <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
             <title>Netflix Clone</title>
     </head>
     <body>
@@ -28,8 +28,8 @@
     <main>
         <div class="filme-principal">
             <div class="container">
-                <h3 class="titulo">GREY'S ANATOMY</h3>
-                <p class='descricao'>Os médicos do Grey Sloan Memorial Hospital lidam diariamente com casos e consequências de vida ou morte. É um no outro que eles encontram apoio, conforto, amizade e, às vezes, até mais que amizade... </p>
+                <h3 class="titulo">ATYPICAL</h3>
+                <p class='descricao'>Quando um adolescente com traços de autismo resolve arrumar uma namorada, sua busca por independência coloca a família toda em uma aventura de autodescoberta.</p>
                 <div class="botoes">
                      <button role="button" class="botao">
                         <i class="fas fa-play"></i>
@@ -44,44 +44,44 @@
         </div>
     </main>
 
-    <div class="carrossel-filmes">
+    <div class="carrosel-filmes">
         <div class="owl-carousel owl-theme">
             <div class="item">
-                <img class="box-filme" src="\img/min1.jpg" alt=""  srcset="">
+                <img class="box-filme" src="/img/mini1.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min2.jpg" alt=""  srcset="">
+                <img class="box-filme" src="/img/mini2.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min3.jpg" alt=""  srcset="">
+                <img class="box-filme" src="/img/mini3.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min4.jpg" alt=""  srcset="">
+                <img class="box-filme" src="/img/mini4.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min5.jpg" alt=""  srcset="">
+                <img class="box-filme" src="/img/mini5.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min6.jpg" alt=""  srcset="">
+                <img class="box-filme" src="/img/mini6.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min7.jpg" alt=""  srcset="">
+                <img class="box-filme" src="/img/mini7.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min8.jpg" alt=""  srcset="">
+                <img class="box-filme" src="/img/mini8.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min9.jpg" alt=""  srcset="">
+                <img class="box-filme" src="/img/mini9.jpg" alt=""  srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="\img/min10.jpg" alt=""  srcset="">
+                <img class="box-filme" src="/img/mini10.jpg" alt=""  srcset="">
             </div>
         </div>    
     </div>
 
     <script src="https://kit.fontawesome.com/d575673e2b.js"></script>
-    <script src="js/owl/jquery.min.js"></script>
-    <script scr="js/owl/owl.carousel.min.js"></script>
+    <script src="/js/owl/jquery.min.js"></script>
+    <script src="/js/owl/owl.carousel.min.js"></script>
     <script src="js/owl/setup.js"></script>
 </body>
 </html>
